# remediation_search

./: ALERT_HANDLING_GUIDE.md  FLOW.md  PROJECT_FLOW.md  Pod(s)inPendingState.docx  PodsInCrashloopbackoff.docx  README.md  pyproject.toml  startup.py
Remediation_Search.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
outputs/processed_chunks/: chunk_000.json  chunk_001.json  chunk_002.json  chunk_003.json
remediation_search/: __init__.py  __main__.py  chunking_service.py  config.py  document_processor.py  domain_models.py  input_handler.py  input_processor.py  matching_strategy.py  remediation_finder.py  remediation_service.py  response_formatter.py
remediation_search/api/: __init__.py  __main__.py  app.py  dependencies.py  schemas.py
remediation_search/core/: __init__.py  domain_models.py
remediation_search/formatters/: __init__.py  response_formatter.py
remediation_search/handlers/: __init__.py  input_handler.py
remediation_search/legacy/: __init__.py  remediation_finder.py
remediation_search/processing/: __init__.py  input_processor.py
remediation_search/services/: __init__.py  chunking_service.py  document_processor.py  remediation_service.py
remediation_search/strategies/: __init__.py  matching_strategy.py
tests/: test_remediation_finder.py
